@@ -1,17 +1,24 @@
+AUX postfix_exporter-1.confd 891 BLAKE2B 7483607fd56a7cad95df4a1ba50306b1dd80226ad7caa7dc87de9d4de841546895df183f27232a9937c8c54df1d007f634150d238921226095be754281566591 SHA512 46650da87890f8d52efa2d28204c6f8bc31725cc5df2f7e762a7b6ee95857b5e8ca5ee529f5f2c9c96f174402aa002437300e6383c8de608338ce40a5a800cd9
 AUX postfix_exporter.confd 527 BLAKE2B c05b24a709dd2d4f67f048975fedae0ca78eaacf42918c56c20d7a1aba8568158ee573076bce0c77518b55db5a78fd36bb0d5bd79138e7a31e47d1b7cc47c7c7 SHA512 6275fc294668e64996053923be9c3c00246c2db5deaaa50b28ddc1f049f953f51d9923813c32ca8f809d409a8e843c0de49fafe3d1ed11f69f222e3e1bf25a77
 AUX postfix_exporter.initd 565 BLAKE2B 2bb9b4de2fdefd5e4be00415430eccd378dcb74254a308667679595269936a6acc02249a7c84f3d18f453efca7d64fd0a89748d601e97c8839130f0983285023 SHA512 4a525dfd6cac0d83ebf41b9f9265d1f06816bf25ed5753719451a187d71b7d4bdbc8669c6f34797e6c75ead5c489f18971435aae47396ec8c0c91554c5edbe3b
 AUX postfix_exporter.logrotated 105 BLAKE2B 5285292139b4412afa9ab5d0fbe19f17f8785e0f98784a18f400373ec2c079cd4302ebb458564f2f052fc77a9b94709c81445947dd46a108029e680a0fd2b81c SHA512 1c20e1718bdd91df38758d30af520db983146332659d06205112a662eb8f096c3671f7631bc835255fdcb0538c66224c244a523e94f12e08ccb7b85b953844b5
 AUX postfix_exporter.service 217 BLAKE2B 78a3822286cd117dcf873eb04a9edfd3fcef41a34acbe6852de29156086e564e9de39f19515f786ff65cae3aa4f696ab9a9703e9554e7e53897549b251e5b961 SHA512 880550355ff17c564948fe8d5ec0bc1c1a93a4eef4a3a97753f1153ec3c446a0820ab15c0318160a10db6be22e865172eb61ca3a47495252b151871fcc3baf30
+DIST github.com-alecthomas-kingpin-947dcec5ba9c011838740e680966fd7087a71d0d.tar.gz 44386 BLAKE2B 6bdff266da6f9b96cd8c3c04e0a09333ba3435228f3bcd1cb65372dc8ff9955524179ef5f122998925fb3d91b536598b5312eda41418082771c4a9c16bbbb2c0 SHA512 e143600cb6591aeb6f4bea461f866fdfb5563778d1c472d27c2d37db50bed74de6e3874c204795aea0a8132b4d6511795bce25e689f74400b0254288d11fdaef
+DIST github.com-alecthomas-template-fb15b899a75114aa79cc930e33c46b577cc664b1.tar.gz 55359 BLAKE2B 3452261d9866bf22d2f649ac37b894b257d63d64082ebb7d6139521a0b15d8af69ade521e633dd98a133d6433f505a25cf4a769d6bb4569fca2e826b5a2f0bfa SHA512 a2355c5ce4509ac4a5548d8b1d7b4b63b1c15781efb6dcf2b67c6b475ba9895b7f71f5f6f53923112acf205398023ac5a5d44b8f9edb339dc83d4d72a81d7c08
+DIST github.com-alecthomas-units-f65c72e2690dc4b403c8bd637baf4611cd4c069b.tar.gz 4926 BLAKE2B 2038fc444b1d1f82323e008dc1e3af4ba291bf14923ee494ab5040c822b9e8da07e6e03a98d1eea24c64cbd825a467e6fdfd0646d5842dc0b1ec29f714bbe49e SHA512 419f26e29e03991e296fbbfddbb83e4a15534519d8e91d83784c69e69b7635b8b353c0f48fbf81060c14d1afe2e767ad6a0d491a326cd9ce542ebc3dc5a2bd23
 DIST github.com-beorn7-perks-3a771d992973f24aa725d07868b467d1ddfceafb.tar.gz 10800 BLAKE2B 5487155a4d010af70b6ea2625d10ae03b6642507902d7dc168edb5d7cf0efa1777b248d0df34ed1a2564950b12613256c1c6ce1d8c9723cc34977ed883b21c8d SHA512 c6aa5df262ab607c0a5f64372fc2fec1ddda9e5624e9d9a22cdd1bc11822c99736d88bdf5e3fc6050217b5084548417cb2926c3940e156da9397d828d59ce277
 DIST github.com-coreos-go-systemd-bebb2b01b0473b183e4624aaf8e23ae6f4b22417.tar.gz 60308 BLAKE2B 0b042dae9418cae85d258f1ba029f5edf0550971583c9389a13230b08b6a164600bc9bc36392daaf85af6cd1e1140b6c3f7a8af268be1808e0fe07b5a7223efb SHA512 3469e4db9ad335443ff8da4421e790a21cf56489f8be473fdbe36dc000f6a4497ee68d0038202ab28f5cb7655212e33988ba79ad7cac39fd49f6e35f0f6b728e
 DIST github.com-coreos-pkg-97fdf19511ea361ae1c100dd393cc47f8dcfa1e1.tar.gz 32444 BLAKE2B 2601d814407a50eb19e1413228091ecac21ad76bee643e5dfd5e6cff574ddf2dad8a09a1d366f680d48a7402d2ee73eab64dda3a50c3f1be1d594d09c21fb9ed SHA512 3212abf2ec16038d9bd9705bbdaa0f905678b7ec928065f122b54926b90d629ef456c903dd020e98ee56271c82614ca54c4690bb7b258084a0d0bf8422a39d6f
 DIST github.com-golang-protobuf-e09c5db296004fbe3f74490e84dcd62c3c5ddb1b.tar.gz 269725 BLAKE2B a62a3f96c49d77776103a9bece69b615e00d4140c9de8b42fb7edac979c8a8d172bd21062d3d6e24ae01dba10b320ff208ff8c6916da2d84118da448afc8caf7 SHA512 f64fa42e7ed9701860e16b1cdedc9f6b029630b6f534ee403ede1223c0c7542c731735995ea9763f093b56146776902b6633e5b1691b1f1dd4ab84dea0092099
+DIST github.com-hpcloud-tail-a30252cb686a21eb2d0b98132633053ec2f7f1e5.tar.gz 37808 BLAKE2B 51a03b59e638fd4d6e8fd1be053af998ced691568728c5509c865ea73b59592786682333cd5c355fcabe61c4c13ce0e2a0ba6dace505cd632c434e041223cd4a SHA512 4eb97bcd2f71307d6b0de176b931a9e15ddb4567ebcdb6419302805ded0948abf92522e342f653f3bd042906c9c32649d6c288dec589b48b751d3edea797ab84
 DIST github.com-matttproud-golang_protobuf_extensions-c12348ce28de40eed0136aa2b644d0ee0650e56c.tar.gz 37215 BLAKE2B b3b007f925a4a1c1862c8cbe34c5cd225dfa610ad8c56b5328e6920a44b507680daeea97209370bd6b259654d0ca5791f4bcc54b8bd8970b9aaf994eada16d4f SHA512 2f78290d1448cfc041d10210092d6da6f3df2b9b6c16ff730750e976e450dafe2645ba945319a0a3064c88f9c18652c69c0e0cf69d8931c08d23ffe65a8cc07d
 DIST github.com-prometheus-client_golang-f504d69affe11ec1ccb2e5948127f86878c9fd57.tar.gz 106949 BLAKE2B b5ee911f6d478ae21a71c2827f541ecd174dee7dbf23fff58a517e739f0e16bf91451a6aabf3f3f786b62256e2c4ee8481cc3169d01819425d56a0eb802a36c9 SHA512 234ad2fa57751901ab2a0e5843bce17689166d8fc285d63f9de0da412cfe7176e8a9f96c0bf5342184985fbb564def31087255bf11766331636c3624fe85eb62
 DIST github.com-prometheus-client_model-99fa1f4be8e564e8a6b613da7fa6f46c9edafc6c.tar.gz 54718 BLAKE2B 1dec6ac40fc5103117c2cf0538e138fc57c7b9795516c530b3c0dc2f5983f88c2d0eb1b094859815397fb14d50648240556fb6b11a8935586eca29eb66b4e958 SHA512 99bc72ca0887df4c7ab5a006af9c59afdc1281fe6d6d17f2897428a06da80d63d6ccd476deacb933cb208357500f14a7b96e99b9c5a7582e65a7aae87aaf2c50
 DIST github.com-prometheus-common-38c53a9f4bfcd932d1b00bfc65e256a7fba6b37a.tar.gz 63007 BLAKE2B a62f727ef9dd42d52f495ab7449cbafbe7c7fcdb1bc171df97c40348dcb7fe12788223d7a2aea3398cae7dd17ec73ae6349b5e5f35f4785f2796cc9a16c2d420 SHA512 4f1ab6cffc309a00ed68959b9372e1d3ea4f8d597b8c462a4e365cf22737245e601b8bda0764bbd1f0172d773805d16e90a8aa90cb95e9462e35320043e04060
 DIST github.com-prometheus-procfs-780932d4fbbe0e69b84c34c20f5c8d0981e109ea.tar.gz 56873 BLAKE2B 31ae12d51b6a28c285bd5854b137d2634499d0db3c2c65c0404ca5a902ffec2e9bf689261ea51c2fe1643733f09a780c437f7a7899a5e6c3e3d100a36e07b897 SHA512 a548c6bc71456c9878cb34ad1514d92c8737e01b555e953f848cc1ae7944424b06a14a8ab0c6de4d99dbb189a0f29e2bb9ae09b5adffc327c28f5c50c2819892
 DIST postfix_exporter-0.1.2.tar.gz 11552 BLAKE2B 987c81482fc984e8f6c870fdaf7ce2ef67b3fa66e5782713a645d35b76a1bde1dde97a79705569d1423a9356309d0b7240c77dba386127e8a5035990220d2a62 SHA512 579793281dedd858538ab9a931e0003cfc9989204ebf4352dd4860e5a7f62b919d77a9e0facb9daff6706771010f9e807061dace8cb88928635d55111c7c482a
+DIST postfix_exporter-0.2.0.tar.gz 12119 BLAKE2B 3c5b28f31e38bbd28dc4f5d5d7f25db0711595698842e0629e6d5336e80bc22d93ebee35533b94d3ebc07eb48ab9da8c31e7ac0cd759eb3e20fa0d90329a81c4 SHA512 a8e5be3b9dca47111f32981f112e11f2aa5976fc37ca8a1a64e03ea732fa9d3d6963ce03e401b908485097556fcdfb7ef7276372e8a068aab719910f1a9c346f
 EBUILD postfix_exporter-0.1.2.ebuild 1851 BLAKE2B 101c64cdf667044ff1cd43cdf5500386c4e3d26de962c6e25fd638422f1d1d86ad012ba51ea8421e884ab97efc59a4e8e0a6c5b2d5df5dcc6b22cb50a579bfdc SHA512 eafd06530a5bd5344801d7ed94622ce373372a2b31ab456f50164ae19387c4bf49e8944cbbcb9a792458f28ce7d05f9a959a60d2c5176f16b7997ab215beb695
-MISC ChangeLog 326 BLAKE2B 22f45fbf29654efd2aa16319d67a4e922568bdc9813133cf1b00ddbc21987c7881587bc088e6b2102bac22126e4f12a18b96df5500ef91f04850936dd02ec050 SHA512 4509cce7de1d962e8a305b9ba0678cfbeb9f1e34fdea1e64e4b6b4bd1153cbc5630aede48017b148b5ffac61b300f0ebd2729ca5b8c9b9041b55f01a214ed69b
+EBUILD postfix_exporter-0.2.0.ebuild 2142 BLAKE2B 78bb2fa9ddfaab1f544b525cff80d17b7047d63059f538703004003c4fa309442efe65c6ebaae0544eb40b6b394ea5485b7b4692dcfb5c2af20a565ec0d00cda SHA512 3d64b6a00e7116dc54bdd611e0e39e418bcd1a694e3b679a6d914f6050cc2ac9ba892c103d38bd03d551231a4afc68296fb4999838355c8405c4b8ab45bf6a4b
+MISC ChangeLog 531 BLAKE2B 2d87e31525a0a865c6a578445abb9e54ff521437a0fedaebae7de1aceff5f5024ac99158d9a85c370a20df6dffc97ee36653f5ed924964bb4d0b8b59a630bfcf SHA512 e93af2fd47ba199e87015bd5dc873ce9bb0651d132280d8f766c9d95b862213247994d32c609d5eb122945aacd366b3c96d1f051288c9b40ea716db1561d8dc3
 MISC metadata.xml 255 BLAKE2B 1132f0657024f17717e5191a4992978685715f9abb96052db6399468506deaa85454efcaf58c7dcebfe5e1cf8948c767a7b001832d50c7d9dc162b0ff1395361 SHA512 36fb59a02d322553d6bfad2deeff884cc782c54bbb01a3fb344767fb43536905c43950df368e645d08ba9c48f3ec13c05b1d3c827fa12581c164623d2c174d73
